--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store-devtools": "^7.1.0",
     "core-js": "^2.5.4",
     "ngrx-data": "^6.1.0-beta.3",
+    "ngx-bootstrap": "^3.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
